# Query-Generator

./: .env.example  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: api_v1_urls.py  celery.py  urls.py
app/accounts/: serializers.py  tests.py  urls.py  views.py
app/common/: crypto.py  tests.py
app/common/middleware/: tenant.py
app/connections/: models.py  serializers.py  tests.py  urls.py  views.py
app/nlq/: urls.py  views.py
app/nlq/services/: orchestrator.py  validator.py
app/nlq/tests/: test_api.py  test_orchestrator.py  test_validator.py
app/queries/: tasks.py
app/schema_registry/: tasks.py  tests.py
app/settings/: base.py
app/tenancy/: serializers.py  urls.py  views.py
app/tenancy/tests/: test_api.py  test_isolation.py
backend/: README.md  db.sqlite3  manage.py  pyproject.toml
backend/app/: __init__.py  asgi.py  urls.py  wsgi.py
backend/app/accounts/: admin.py  models.py
backend/app/accounts/migrations/: 0001_initial.py
backend/app/audit/: apps.py  models.py
backend/app/audit/migrations/: 0001_initial.py
backend/app/common/: models.py
backend/app/connections/: admin.py  apps.py  models.py  tests.py
backend/app/connections/migrations/: 0001_initial.py
backend/app/nlq/: apps.py  models.py
backend/app/nlq/tests/: test_validator.py
backend/app/queries/: apps.py  models.py
backend/app/queries/migrations/: 0001_initial.py
backend/app/schema_registry/: apps.py  models.py
backend/app/schema_registry/migrations/: 0001_initial.py
backend/app/settings/: base.py  local.py  prod.py
backend/app/tenancy/: admin.py  apps.py  models.py
backend/app/tenancy/migrations/: 0001_initial.py
backend/app/tenancy/tests/: test_isolation.py
docker/: docker-compose.yml
docker/nginx/: Dockerfile  nginx.conf
docs/: ARCHITECTURE.md  MONITORING.md  SECURITY.md
frontend/: README.md  package.json
